--- a/quiz/templates/quiz/index.html
+++ b/quiz/templates/quiz/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <!-- 
 Theme: JANGO - Ultimate Multipurpose HTML Theme Built With Twitter Bootstrap 3.3.5
@@ -22,26 +23,26 @@ Follow: www.twitter.com/themehats
 <meta content="" name="author"/>
 <!-- BEGIN GLOBAL MANDATORY STYLES -->
 <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700&amp;subset=all' rel='stylesheet' type='text/css'>
-<link href="assets/plugins/socicon/socicon.css" rel="stylesheet" type="text/css"/>
-<link href="assets/plugins/bootstrap-social/bootstrap-social.css" rel="stylesheet" type="text/css"/>
-<link href="assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-<link href="assets/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css"/>
-<link href="assets/plugins/animate/animate.min.css" rel="stylesheet" type="text/css"/>
-<link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/plugins/socicon/socicon.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/plugins/bootstrap-social/bootstrap-social.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/plugins/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/plugins/simple-line-icons/simple-line-icons.min.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/plugins/animate/animate.min.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/plugins/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
 <!-- END GLOBAL MANDATORY STYLES -->
 <!-- BEGIN: BASE PLUGINS  -->
-<link href="assets/plugins/revo-slider/css/settings.css" rel="stylesheet" type="text/css"/>
-<link href="assets/plugins/cubeportfolio/css/cubeportfolio.min.css" rel="stylesheet" type="text/css"/>
-<link href="assets/plugins/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css"/>
-<link href="assets/plugins/owl-carousel/owl.theme.css" rel="stylesheet" type="text/css"/>
-<link href="assets/plugins/owl-carousel/owl.transitions.css" rel="stylesheet" type="text/css"/>
-<link href="assets/plugins/fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/plugins/revo-slider/css/settings.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/plugins/cubeportfolio/css/cubeportfolio.min.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/plugins/owl-carousel/owl.carousel.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/plugins/owl-carousel/owl.theme.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/plugins/owl-carousel/owl.transitions.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/plugins/fancybox/jquery.fancybox.css' %}" rel="stylesheet" type="text/css"/>
 <!-- END: BASE PLUGINS -->
 <!-- BEGIN THEME STYLES -->
-<link href="assets/base/css/plugins.css" rel="stylesheet" type="text/css"/>
-<link href="assets/base/css/components.css" id="style_components" rel="stylesheet" type="text/css"/>
-<link href="assets/base/css/themes/default.css" rel="stylesheet" id="style_theme" type="text/css"/>
-<link href="assets/base/css/custom.css" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/base/css/plugins.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/base/css/components.css' %}" id="style_components" rel="stylesheet" type="text/css"/>
+<link href="{% static 'quiz/assets/base/css/themes/default.css' %}" rel="stylesheet" id="style_theme" type="text/css"/>
+<link href="{% static 'quiz/assets/base/css/custom.css' %}" rel="stylesheet" type="text/css"/>
 <!-- END THEME STYLES -->
 <link rel="shortcut icon" href="favicon.ico"/>
 </head>
@@ -64,7 +65,7 @@ Follow: www.twitter.com/themehats
 			<ul>
 				<!--BEGIN: SLIDE #1 -->
 				<li data-transition="fade" data-slotamount="1" data-masterspeed="1000">
-					<img alt="" src="assets/base/img/content/backgrounds/index.jpg" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
+					<img alt="" src="{% static 'quiz/assets/base/img/content/backgrounds/index.jpg' %}" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
 					<div class="caption customin customout tp-resizeme" data-x="center" data-y="center" data-hoffset="" data-voffset="-50" data-speed="500" data-start="1000" data-customin="x:0;y:0;z:0;rotationX:0.5;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" data-easing="Back.easeOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1" data-endelementdelay="0.1" data-endspeed="600">
 						<h3 class="c-block-bordered c-font-48 c-font-bold c-font-center c-font-uppercase c-font-white c-block">
 						ИСТОРИЯ ПЕТЕРБУРГСКОГО МЕТРОСТРОЯ<br>
@@ -102,22 +103,22 @@ Follow: www.twitter.com/themehats
 <!--[if lt IE 9]>
 	<script src="../assets/global/plugins/excanvas.min.js"></script>
 	<![endif]-->
-<script src="assets/plugins/jquery.min.js" type="text/javascript"></script>
-<script src="assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
-<script src="assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="{% static 'quiz/assets/plugins/jquery.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'quiz/assets/plugins/jquery-migrate.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'quiz/assets/plugins/bootstrap/js/bootstrap.min.js' %}" type="text/javascript"></script>
 <!-- END: CORE PLUGINS -->
 <!-- BEGIN: LAYOUT PLUGINS -->
-<script src="assets/plugins/revo-slider/js/jquery.themepunch.tools.min.js" type="text/javascript"></script>
-<script src="assets/plugins/revo-slider/js/jquery.themepunch.revolution.min.js" type="text/javascript"></script>
-<script src="assets/plugins/cubeportfolio/js/jquery.cubeportfolio.min.js" type="text/javascript"></script>
-<script src="assets/plugins/owl-carousel/owl.carousel.min.js" type="text/javascript"></script>
-<script src="assets/plugins/counterup/jquery.waypoints.min.js" type="text/javascript"></script>
-<script src="assets/plugins/counterup/jquery.counterup.min.js" type="text/javascript"></script>
-<script src="assets/plugins/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+<script src="{% static 'quiz/assets/plugins/revo-slider/js/jquery.themepunch.tools.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'quiz/assets/plugins/revo-slider/js/jquery.themepunch.revolution.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'quiz/assets/plugins/cubeportfolio/js/jquery.cubeportfolio.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'quiz/assets/plugins/owl-carousel/owl.carousel.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'quiz/assets/plugins/counterup/jquery.waypoints.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'quiz/assets/plugins/counterup/jquery.counterup.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'quiz/assets/plugins/fancybox/jquery.fancybox.pack.js' %}" type="text/javascript"></script>
 <!-- END: LAYOUT PLUGINS -->
 <!-- BEGIN: THEME SCRIPTS -->
-<script src="assets/base/js/components.js" type="text/javascript"></script>
-<script src="assets/base/js/app.js" type="text/javascript"></script>
+<script src="{% static 'quiz/assets/base/js/components.js' %}" type="text/javascript"></script>
+<script src="{% static 'quiz/assets/base/js/app.js' %}" type="text/javascript"></script>
 <script>
 	$(document).ready(function() {
 		App.init(); // init core
