--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -3,102 +3,18 @@
 
 {% block content %}
 
+<div>
+	<h3>Вопрос №{{ question.number }}</h3>
+	<h3>{{ question.title }}</h3>
+	<h4>
+		Варианты ответа:<br>
+		{{ question.ans1 }}<br>
+		{{ question.ans2 }}<br>
+		{{ question.ans3 }}<br>
+		{{ question.ans4 }}<br>
+	</h4>
+</div><!-- Вопрос -->
 
-
-<div class="c-layout-page">
-	<div class="c-content-box c-size-lg c-bg-grey-1">
-		<div class="container">
-			<div class="c-content-title-1">
-                <h3 class="c-center c-font-uppercase c-font-bold" id="q_num">Вопрос №{{ question.number }}</h3>
-				<h3 class="c-center" id="q_text">{{ question.title }}</h3>
-			</div><!-- Вопрос -->
-				<div class="col-md-6">
-					<div class="c-content-accordion-1 c-theme">
-						<div class="panel-group" id="accordion" role="tablist">
-							<div class="panel">
-								<div class="panel-heading" role="tab" id="headingTwo">
-									<h4 class="panel-title">
-									<a class="collapsed c-font-bold c-font-19"  href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"  data-toggle="modal" data-target="#myModal">
-										{{ question.ans1 }}</a>
-									</h4>
-
-								</div>
-
-							</div><!-- 1 -->
-							<div class="panel">
-								<div class="panel-heading" role="tab" id="headingThree">
-									<h4 class="panel-title">
-									<a class="collapsed c-font-bold c-font-19"  href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" data-toggle="modal" data-target="#myModal">
-										{{ question.ans2 }}</a>
-									</h4>
-								</div>
-
-							</div><!-- 2 -->
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6">
-					<div class="c-content-accordion-1 c-theme">
-						<div class="panel-group" id="accordion-2" role="tablist">
-							<div class="panel">
-								<div class="panel-heading" role="tab" id="headingTwo-1">
-									<h4 class="panel-title">
-									<a class="collapsed c-font-bold c-font-19" data-toggle="collapse" data-parent="#accordion-2" href="#collapseTwo-1" aria-expanded="false" aria-controls="collapseTwo">
-									{{ question.ans3 }}</a>
-									</h4>
-								</div>
-
-							</div><!-- 3 -->
-							<div class="panel">
-								<div class="panel-heading" role="tab" id="headingThree-1">
-									<h4 class="panel-title">
-									<a class="collapsed c-font-bold c-font-19" data-toggle="collapse" data-parent="#accordion-2" href="#collapseThree-1" aria-expanded="false" aria-controls="collapseThree">
-									{{ question.ans4 }}</a>
-									</h4>
-								</div>
-
-							</div><!-- 4 -->
-						</div>
-					</div>
-				</div>
-			</div>
-
-            <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content c-square">
-                        <div class="modal-header">
-
-                            <h4 class="modal-title" id="myModalLabel">Верно/Неверно</h4>
-                        </div>
-                        <div class="modal-body c-font-bold">
-                            <p>
-                                Здесь ответ на вопрос
-                            </p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn c-theme-btn c-btn-border-2x c-btn-square c-btn-bold c-btn-uppercase" data-dismiss="modal"
-                            onclick="changeText2()">Далее</button><!-- здесь замена номера вопроса-->
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
-		</div>
-	</div>
-
-</div>
-
-<script>
-
-	function changeText2(){
- 	document.getElementById('q_num').innerHTML = 'Теперь вопрос №2';
- 	document.getElementById('q_text').innerHTML =
- 		'Кто из руководителей Ленметростроя продолжил карьеру начальником Ленинградского метрополитена?';
-}
-</script>
 
 {% endblock %}
 
