добавлен переход к следующему вопросу

--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -15,6 +15,13 @@
 	</h4>
 </div><!-- Вопрос -->
 
+<form method="get">
+  <button
+    type="submit"
+    value="{{ question.number }}"
+    name="nextq">Далее
+  </button>
 
+ </form>
 {% endblock %}
 
