--- a/quiz/templates/quiz/answer.html
+++ b/quiz/templates/quiz/answer.html
@@ -1,21 +1,63 @@
+{% extends "quiz/base.html" %}
+{% load static %}
 
-<div>
-	<p>
-		Вопрос № {{ question.number }}
-	</p>
-	<p>
-		Выбран вариант ответа: {{ answer.answer }}
-	</p>
-	<p>
-		Правильный ответ: {{ question.r_ans }}
-	</p>
+{% block content %}
 
-	<form method="get">
-	  <button
-		type="submit"
-		value="{{ question.number }}"
-		name="question">Далее
-	  </button>
- 	</form>
+<style>
+	.tablecell{
+    	width: 100%;
+	}
+	.cellspacing{
+		border-collapse: separate;
+		border-spacing: 30px 30px;
+		width: 100%;
+	}
+	.divnew {
+  		white-space: normal;
+		line-height: 2;
 
-</div>
+ 	}
+
+</style>
+
+<section class="c-layout-revo-slider c-layout-revo-slider-4">
+	<div class="tp-banner">
+		<ul>
+			<li data-transition="fade" data-slotamount="1" data-masterspeed="500">
+				<img alt="" src="{% static 'quiz/images/index.jpg' %}" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
+				<div class="caption customin customout tp-resizeme" data-x="center" data-y="100" data-hoffset="" data-voffset="-50" data-speed="500" data-start="1000" data-customin="x:0;y:0;z:-20;rotationX:0.5;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" data-easing="Back.easeOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1" data-endelementdelay="0.1" data-endspeed="600">
+					<div class="c-content-title-1 divnew">
+
+						{% if question.r_ans == answer.answer %}
+						<h3 class="c-center c-font-uppercase c-font-bold c-font-green-2">
+							Верно!</h3>
+						<h3 class="c-center c-font-white" >{{ question.text_answer }}</h3>
+						{% else %}
+						<h3 class="c-center c-font-uppercase c-font-bold c-font-green-2">
+							Неверно!</h3>
+						<h3 class="c-center c-font-white" >Правильный ответ: <br>{{ question.text_answer }}</h3>
+						{% endif %}
+
+					</div>
+
+					<form method="get">
+						<table class="cellspacing">
+							<tr>
+								<td align="center">
+									<button
+											class="c-font-24 btn btn-xlg c-btn-green-2 c-btn-border-1x c-font-uppercase"
+											type="submit"
+											value="{{ question.number }}"
+											name="question">Следующий вопрос
+									</button>
+								</td>
+							</tr>
+						</table>
+					</form>
+				</div>
+			</li>
+		</ul>
+	</div>
+</section>
+
+{% endblock %}
