--- a/quiz/templates/quiz/index.html
+++ b/quiz/templates/quiz/index.html
@@ -3,15 +3,6 @@
 
 {% block content %}
 
-<style>
-
- .divnew {
-  white-space: normal;
-	 line-height: 2;
- }
-
-</style>
-
 <section class="c-layout-revo-slider c-layout-revo-slider-4">
 	<div class="tp-banner">
 		<ul>
@@ -21,7 +12,7 @@
 					<h3 class="c-block-bordered c-font-48 c-font-bold c-font-center c-font-uppercase c-font-green-2 c-block">
 						ИСТОРИЯ ПЕТЕРБУРГСКОГО МЕТРОСТРОЯ<br>
 						<div class="c-font-24 c-font-lowercase c-font-thin">
-							<p class="divnew c-font-white">
+							<p class="divnew2 c-font-white">
 								<br>
 								21 января 2021 года петербургскому Метрострою исполняется 80 лет.<br>
 								Ровно столько же лет и ленинградскому-петербургскому метростроению,
