--- a/quiz/templates/quiz/base.html
+++ b/quiz/templates/quiz/base.html
@@ -14,9 +14,7 @@
 
 <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700&amp;subset=all' rel='stylesheet' type='text/css'>
 <link href="{% static 'quiz/assets/plugins/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
-
 <link href="{% static 'quiz/assets/plugins/revo-slider/css/settings.css' %}" rel="stylesheet" type="text/css"/>
-
 <link href="{% static 'quiz/assets/base/css/plugins.css' %}" rel="stylesheet" type="text/css"/>
 <link href="{% static 'quiz/assets/base/css/components.css' %}" id="style_components" rel="stylesheet" type="text/css"/>
 <link href="{% static 'quiz/assets/base/css/themes/default.css' %}" rel="stylesheet" id="style_theme" type="text/css"/> <!-- кнопка "начать"-->
@@ -27,21 +25,17 @@
 
 <body>
 
-
 {% block content %}
 
 {% endblock %}
 
-
 <script src="{% static 'quiz/assets/plugins/jquery.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'quiz/assets/plugins/bootstrap/js/bootstrap.min.js' %}" type="text/javascript"></script>
-
 <script src="{% static 'quiz/assets/plugins/revo-slider/js/jquery.themepunch.tools.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'quiz/assets/plugins/revo-slider/js/jquery.themepunch.revolution.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'quiz/assets/plugins/counterup/jquery.counterup.min.js' %}" type="text/javascript"></script>
-
-
 <script src="{% static 'quiz/assets/base/js/app.js' %}" type="text/javascript"></script>
+
 <script>
 	$(document).ready(function() {
 		App.init(); // init core
@@ -50,9 +44,9 @@
 		var slider = $('.c-layout-revo-slider .tp-banner');
 	    var cont = $('.c-layout-revo-slider .tp-banner-container');
 	    var api = slider.show().revolution({
-	        delay: 15000,
+	        delay: 5000,
 	        startwidth:1170,
-	        startheight: (App.getViewPort().width < App.getBreakpoint('md') ? 1024 : 620),
+	        startheight: 620,
 	        navigationType: "hide",
 	        navigationArrows: "solo",
 	        touchenabled: "off",
@@ -60,20 +54,26 @@
 	        keyboardNavigation: "off",
 	        navigationStyle: "circle",
 	        navigationHAlign: "center",
-	        navigationVAlign: "center",
-	        fullScreenAlignForce:"off",
-	        shadow: 0,
-	        fullWidth: "on",
-	        fullScreen: "off",
+	        navigationVAlign: "bottom",
 	        spinner: "spinner2",
-	        forceFullWidth: "on",
+	        fullScreen: "on",
+	        fullScreenAlignForce:"on",
+	        fullScreenOffsetContainer: (App.getViewPort().width < App.getBreakpoint('md') ? '.c-layout-header' : ''),
+	        shadow: 0,
+	        fullWidth: "off",
+	        forceFullWidth: "off",
 	        hideTimerBar:"on",
 	        hideThumbsOnMobile: "on",
 	        hideNavDelayOnMobile: 1500,
 	        hideBulletsOnMobile: "on",
 	        hideArrowsOnMobile: "on",
-	        hideThumbsUnderResolution: 0,
-	        videoJsPath: "rs-plugin/videojs/",
+	        hideThumbsUnderResolution: 0
+	    });
+	    api.bind("revolution.slide.onchange",function (e,data) {
+	        $('.c-layout-header').removeClass('hide');
+	        setTimeout(function(){
+	            $('.c-singup-form').fadeIn();
+	        }, 1500);
 	    });
 	});
 	</script>
