--- a/quiz/templates/quiz/answer.html
+++ b/quiz/templates/quiz/answer.html
@@ -8,26 +8,18 @@
 		<ul>
 			<li data-transition="fade" data-slotamount="1" data-masterspeed="500">
 				<img alt="" src="{% static 'quiz/images/index.jpg' %}" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
-				<div class="caption customin customout tp-resizeme" data-x="center" data-y="50" data-hoffset="" data-voffset="-50" data-speed="500" data-start="1000" data-customin="x:0;y:0;z:-20;rotationX:0.5;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" data-easing="Back.easeOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1" data-endelementdelay="0.1" data-endspeed="600">
+				<div class="caption customin customout" data-x="center" data-y="50" data-hoffset="" data-voffset="-50" data-speed="500" data-start="1000" data-customin="x:0;y:0;z:-20;rotationX:0.5;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" data-easing="Back.easeOut" data-splitin="none" data-splitout="none" data-elementdelay="0.1" data-endelementdelay="0.1" data-endspeed="600">
 					<div class="c-content-title-1 divnew">
 						{% if question.r_ans == answer.answer %}
-							<h3 class="c-center c-font-uppercase c-font-bold c-font-green-2">
+							<h3 class="c-center c-font-uppercase c-font-bold c-font-ms-green">
 								Верно!</h3>
 						{% else %}
 							<h3 class="c-center c-font-uppercase c-font-bold c-font-red">
 								Неверно!</h3>
-							<h3 class="c-center c-font-green-2 c-font-bold">Правильный ответ:</h3>
+							<h3 class="c-center c-font-ms-green c-font-bold">Правильный ответ:</h3>
 						{% endif %}
 						<h3 class="c-center c-font-white" >
-							<table class="cellspacing">
-								<tr>
-									<td align="center">
-										<div class="tablecell-80">
-											{{ question.text_answer|linebreaks }}
-										</div>
-									</td>
-								</tr>
-							</table>
+							{{ question.text_answer|linebreaks }}
 						</h3>
 					</div>
 
@@ -36,7 +28,7 @@
 							<tr>
 								<td align="center">
 									<button
-											class="c-font-24 btn btn-xlg c-btn-green-2 c-btn-border-1x c-font-uppercase"
+											class="c-font-24 btn btn-xlg c-btn-ms-green c-font-uppercase"
 											type="submit"
 											value="{{ question.number }}"
 											name="question">Следующий вопрос
