--- a/quiz/templates/quiz/base.html
+++ b/quiz/templates/quiz/base.html
@@ -46,7 +46,7 @@
 	    var api = slider.show().revolution({
 	        delay: 5000,
 	        startwidth:1170,
-	        startheight: 620,
+	        startheight: 980,
 	        navigationType: "hide",
 	        navigationArrows: "solo",
 	        touchenabled: "off",
@@ -56,12 +56,12 @@
 	        navigationHAlign: "center",
 	        navigationVAlign: "bottom",
 	        spinner: "spinner2",
-	        fullScreen: "on",
-	        fullScreenAlignForce:"on",
+	        fullScreen: "off",
+	        fullScreenAlignForce:"off",
 	        fullScreenOffsetContainer: (App.getViewPort().width < App.getBreakpoint('md') ? '.c-layout-header' : ''),
 	        shadow: 0,
-	        fullWidth: "off",
-	        forceFullWidth: "off",
+	        fullWidth: "on",
+	        forceFullWidth: "on",
 	        hideTimerBar:"on",
 	        hideThumbsOnMobile: "on",
 	        hideNavDelayOnMobile: 1500,
