--- a/quiz/static/quiz/assets/base/css/custom.css
+++ b/quiz/static/quiz/assets/base/css/custom.css
@@ -62,3 +62,16 @@
   background: #00a6b5;
   border-color: #00a6b5;
 }
+
+.trans {
+	background: white; /* Цвет фона */
+    	border: 1px solid #333; /* Граница вокруг ячеек */
+	padding: 5px;
+	opacity: 1; /* Полупрозрачность таблицы */
+    	filter: alpha(Opacity=100); /* Для IE */
+   	}
+.bgtrans {
+	border: 1px solid #333; /* Граница вокруг ячеек */
+	padding: 5px;
+	background-color:rgba(0, 0, 0, 0.3);
+	}
